# instrumental-convergence

./: .gitignore  README.md  pyproject.toml
no-goal/no_goal/: __init__.py  dataset.py  solver.py  task.py
self-preservation/: IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  test_basic.py
self-preservation/self_preservation/: __init__.py  dataset.py  solver.py  task.py  tools.py
self-preservation/self_preservation/classifiers/: __init__.py  reasoning_classifier.py
self-preservation/self_preservation/scorers/: __init__.py  scorers.py
self-preservation/self_preservation/templates/: roles.py  system_prompt.py  user_prompt.py
self-preservation/self_preservation/templates/scenarios/: ai_agent_evaluator.json  ai_hiring_manager.json  control_roles.json
viz/: self_preservation_agency_comparison.py  self_preservation_agency_reasoning_comparison.py  self_preservation_comparison.py  self_preservation_explicitness_comparison.py  self_preservation_explicitness_reasoning_comparison.py  self_preservation_quality_agency_comparison.py  self_preservation_quality_comparison.py  self_preservation_reasoning_comparison.py
viz/transcripts/: render_latex_transcript.py  transcript.sty
