[project]
name = "instrumental-convergence"
version = "0.1.0"
description = ""
authors = [{name = "Daniel Polatajko", email = "danielpolatajko@gmail.com"}]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["no-goal"]