[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-preservation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
